--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "nodemon start server.js"
   },
   "dependencies": {
+    "axios": "^1.7.8",
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.7",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0"
   },
