--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "gift_page",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,8 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "html2canvas": "^1.4.1",
+    "image-size": "^1.1.1",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7",
+    "pdfkit": "^0.15.1",
     "vue": "^3.5.12",
     "vue-router": "^4.5.0"
   },
